@@ -287,3 +287,9 @@ respectively.
 
 *****
 
+Minor corrections in _quadramp.c, _mandeltr.c, and _mandelecl.c
+light-curve models.
+
+*****
+
+
